Style : Fixed overflow property in edit mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,7 +12,7 @@ body,
 	box-sizing: border-box;
 }
 body {
-	height: 100vh;
+	min-height: 100vh;
 	color: var(--primary-color);
 	background-color: aqua;
 	display: flex;
@@ -135,13 +135,10 @@ h1 {
 .username {
 	display: inline-block;
 	vertical-align: bottom;
-	max-width: 513px;
+	max-width: 490px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-}
-.username .no-ellipsis {
-	text-overflow: unset !important;
 }
 
 #menu-options {
